WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145502
CallLinkStatus should return takesSlowPath if the GC often cleared the IC
https://bugs.webkit.org/show_bug.cgi?id=145502
Summary
CallLinkStatus should return takesSlowPath if the GC often cleared the IC
Filip Pizlo
Reported
2015-05-31 10:59:34 PDT
...
Attachments
the patch
(6.04 KB, patch)
2015-06-02 15:47 PDT
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2015-06-02 15:47:08 PDT
Created
attachment 254119
[details]
the patch
WebKit Commit Bot
Comment 2
2015-06-02 15:48:37 PDT
Attachment 254119
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/bytecode/CallLinkInfo.cpp:61: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3
2015-06-03 10:38:41 PDT
Comment on
attachment 254119
[details]
the patch r=me
Filip Pizlo
Comment 4
2015-06-03 13:08:49 PDT
Landed in
http://trac.webkit.org/changeset/185161
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug